# scgpt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: data.yaml  data_synthetic_demo.yaml  model.yaml  model_synthetic_demo.yaml  train.yaml  train_synthetic_demo.yaml
data/raw/: README.md
docs/: architecture.md
docs/datasets/: norman2019.md
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb
scripts/: bootstrap_env.sh  download_norman2019.sh  evaluate_model.py  generate_deg_artifact.py  generate_results_assets.py  generate_synthetic_demo.py  inspect_anndata.py  multi_seed_report.py  preprocess_data.py  project_doctor.py  project_pitch.py  project_showcase.py  project_snapshot.py  run_app.sh  run_doctor.sh  run_evaluate.sh  run_full_evaluation.sh  run_generate_deg_artifact.sh  run_generate_results_assets.sh  run_generate_synthetic_demo.sh  run_generate_synthetic_showcase.sh  run_inspect_anndata.sh  run_multi_seed_report.sh  run_norman2019_demo.sh  run_pitch.sh  run_preprocess_demo.sh  run_showcase.sh  run_snapshot.sh  run_summarize_run.sh  run_tests.sh  run_train_baselines.sh  run_train_transformer.sh  summarize_run.py  train_baselines.py  train_transformer.py
src/: __init__.py
src/data/: __init__.py  io.py  pairing.py  preprocess.py  schema.py  synthetic.py  torch_dataset.py
src/evaluation/: __init__.py  deg.py  error_analysis.py  inference.py  metrics.py
src/models/: __init__.py  mlp.py  transformer.py  xgboost_baseline.py
src/ranking/: __init__.py  target_ranking.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  comparison.py  config.py  experiment.py  interview_script.py  logger.py  multiseed.py  project_health.py  project_snapshot.py  seed.py  showcase.py
tests/: test_comparison.py  test_config.py  test_dataset.py  test_deg.py  test_error_analysis.py  test_experiment.py  test_inference.py  test_interview_script.py  test_io.py  test_metrics.py  test_multiseed.py  test_project_health.py  test_project_snapshot.py  test_ranking.py  test_schema.py  test_showcase.py  test_synthetic.py  test_trainer.py  test_xgboost_baseline.py
