[project]
name = "perturbscope-gpt"
version = "0.1.0"
description = "Local-first AI4Bio project for single-cell perturbation response prediction and target prioritization."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "anndata>=0.10",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scanpy>=1.10",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "streamlit>=1.33",
  "torch>=2.2",
  "xgboost>=2.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "nbconvert>=7.16",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
  "E501",   # line-length — handled by formatter
  "B008",   # do not perform function call in default arguments
  "UP007",  # use X | Y for type annotations (Python 3.9+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
# scripts and app do sys.path manipulation before src/ imports — E402 is expected
"scripts/*" = ["E402"]
"app/*" = ["E402"]

